<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/y_axis_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/ySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:text="@string/x_axis_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/xSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:text="@string/select_chart_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/chartSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

</LinearLayout>